--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Bbq" %></title>
-
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag "application", :media => "all" %>
+
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
-    <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
         <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
 
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <% if user_signed_in? %>
+                  <li><%= link_to 'Профиль', current_user %></li>
+                  <li><%= link_to 'Выйти', destroy_user_session_path,
+                          method: :delete %></li>
+                <% else %>
+                  <li><%= link_to 'Войти', new_user_session_path %></li>
+                  <li><%= link_to 'Зарегистрироваться',
+                          new_user_registration_path %></li>
+                <% end %>
           </ul>
         </div>
       </div>
@@ -32,19 +37,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
-          <%= bootstrap_flash %>
+          <% flash.each do |key, value| %>
+              <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+            <% end %>
           <%= yield %>
         </div>
         <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
         </div><!--/span-->
       </div><!--/row-->
 
