--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <form>
         <h2>Регистрация</h2>
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="form-group">
+          <div class="form-group-row">
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
           </div>
 
-          <div class="form-group">
+          <div class="form-group-row">
             <%= f.label :password %>
             <% if @minimum_password_length %>
             <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -20,7 +19,7 @@
             <%= f.password_field :password, autocomplete: "new-password" %>
           </div>
 
-          <div class="form-group">
+          <div class="form-group-row">
             <%= f.label :password_confirmation %><br />
             <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
           </div>
@@ -30,7 +29,6 @@
           </div>
         <% end %>
         <%= render "devise/shared/links" %>
-      </form>
     </div>
   </div>
 </div>
