--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,18 @@
 <h2>Забыли пароль?</h2>
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 buffer-top">
 
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="form-group row">
+          <%= f.label :email, class: "col-form-label" %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
         </div>
 
         <div class="actions">
-          <%= f.submit "Send me reset password instructions" %>
+          <%= f.submit "Сбросить пароль" %>
         </div>
       <% end %>
 
