--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,37 +1,37 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 buffer-top">
         <h2>Редактировать профиль</h2>
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="form-group-row">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <div class="form-group row">
+            <%= f.label :email, class: "col-form-label" %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
           </div>
 
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
           <% end %>
 
-          <div class="form-group-row">
-            <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-            <%= f.password_field :password, autocomplete: "новый пароль" %>
+          <div class="form-group row">
+            <%= f.label :password, class: "col-form-label" %>
+            <%= f.password_field :password, autocomplete: "новый пароль", class: 'form-control' %>
             <% if @minimum_password_length %>
               <br />
               <em><%= @minimum_password_length %> characters minimum</em>
             <% end %>
           </div>
 
-          <div class="form-group-row">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "новый пароль" %>
+          <div class="form-group row">
+            <%= f.label :password_confirmation, class: "col-form-label" %>
+            <%= f.password_field :password_confirmation, autocomplete: "новый пароль", class: 'form-control' %>
           </div>
 
-          <div class="form-group-row">
-            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-            <%= f.password_field :current_password, autocomplete: "текущий пароль" %>
+          <div class="form-group row">
+            <%= f.label :current_password, class: "col-form-label" %>
+            <%= f.password_field :current_password, autocomplete: "текущий пароль", class: 'form-control' %>
           </div>
 
           <div class="actions">
