--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,28 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 buffer-top">
         <h2>Регистрация</h2>
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="form-group-row">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <div class="form-group row">
+            <%= f.label :email, class: "col-form-label" %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Email', class: 'form-control' %>
           </div>
 
-          <div class="form-group-row">
-            <%= f.label :password %>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "new-password" %>
+          <div class="form-group row">
+            <%= f.label :password, class: "col-form-label" %>
+            <%= f.password_field :password, autocomplete: "new-password", placeholder: 'Пароль', class: 'form-control' %>
           </div>
 
-          <div class="form-group-row">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          <div class="form-group row">
+            <%= f.label :password_confirmation, class: "col-form-label" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: 'Подтвердите пароль',class: 'form-control' %>
           </div>
 
           <div class="actions">
-            <%= f.submit "Sign up" %>
+            <%= f.submit "Зарегистрироваться" %>
           </div>
         <% end %>
         <%= render "devise/shared/links" %>
