--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,12 +10,11 @@
             <%= f.label :email, class: "col-form-label" %>
             <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
           </div>
-
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
           <% end %>
 
-          <div class="form-group row">
+          <div class="form-group row alert alert-primary" role="alert">
             <%= f.label :password, class: "col-form-label" %>
             <%= f.password_field :password, autocomplete: "новый пароль", class: 'form-control' %>
             <% if @minimum_password_length %>
@@ -35,11 +34,11 @@
           </div>
 
           <div class="actions">
-            <%= f.submit "Update" %>
+            <%= f.submit "Обновить", class: "btn btn-primary" %>
           </div>
         <% end %>
 
-        <p>Unhappy? <%= button_to "Удалить аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete %></p>
+        <p>Unhappy? <%= button_to "Удалить аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete, class: "btn btn-secondary" %></p>
 
         <%= link_to "Назад", :back, class: 'btn btn-my' %>
     </div>
