--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
             <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
           <% end %>
 
-          <div class="form-group row alert alert-danger" role="alert">
+          <div class="form-group row>
             <%= f.label :password, class: "col-form-label" %>
             <%= f.password_field :password, autocomplete: "новый пароль", class: "form-control" %>
             <% if @minimum_password_length %>
