bootstrap devise button

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
           </div>
 
           <div class="actions">
-            <%= f.submit "Зарегистрироваться", class: "btn btn-primary" %>
+            <%= f.submit "Зарегистрироваться", class: "btn btn-light" %>
           </div>
         <% end %>
         <%= render "devise/shared/links" %>
