--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,7 +12,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "Сбросить пароль", class: "btn btn-primary" %>
+          <%= f.submit "Сбросить пароль", class: "btn btn-light" %>
         </div>
       <% end %>
 
