--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
             <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
           <% end %>
 
-          <div class="form-group row>
+          <div class="form-group row">
             <%= f.label :password, class: "col-form-label" %>
             <%= f.password_field :password, autocomplete: "новый пароль", class: "form-control" %>
             <% if @minimum_password_length %>
@@ -33,13 +33,14 @@
           </div>
 
           <div class="actions">
-            <%= f.submit "Обновить", class: "btn btn-primary" %>
+            <%= f.submit "Обновить", class: "btn btn-light" %>
           </div>
         <% end %>
 
-        <p>Unhappy? <%= button_to "Удалить аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete, class: "btn btn-secondary" %></p>
+        <p><%= button_to "Удалить аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete,
+          class: "btn btn-light" %></p>
 
-        <%= link_to "Назад", :back, class: 'btn btn-my' %>
+        <%= link_to "Назад", :back, class: 'btn btn-outline-info' %>
     </div>
   </div>
 </div>
