--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit 'Сохранить', class: 'btn btn-primary' %>
-    или <%= link_to 'вернуться', :back %>
+    <%= f.submit 'Сохранить', class: 'btn btn-light' %>
+    или <%= link_to 'вернуться', :back, class: "btn btn-light" %>
   </div>
 <% end %>
