--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,18 +16,18 @@
   <body>
     <div class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
+        <%= link_to "BBQ!", root_path, class: 'navbar-brand btn btn-light' %>
 
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <% if user_signed_in? %>
-                  <li><%= link_to 'Профиль', current_user %></li>
-                  <li><%= link_to 'Выйти', destroy_user_session_path,
+                  <li><%= link_to 'Профиль', current_user, class: "btn btn-light" %></li>
+                  <li><%= link_to 'Выйти', destroy_user_session_path, class: "btn btn-light",
                           method: :delete %></li>
                 <% else %>
-                  <li><%= link_to 'Войти', new_user_session_path %></li>
+                  <li><%= link_to 'Войти', new_user_session_path, class: "btn btn-light" %></li>
                   <li><%= link_to 'Зарегистрироваться',
-                          new_user_registration_path %></li>
+                          new_user_registration_path, class: "btn btn-light" %></li>
                 <% end %>
           </ul>
         </div>
@@ -47,7 +47,9 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2016</p>
+        <div class="footer-copyright text-left py-3">
+          &copy; Company 2016
+        </div>
       </footer>
 
     </div> <!-- /container -->
