--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6 buffer-top">
     <%= render 'form' %>
 
-    <p class="buffer-top">
+    <p class="buffer-top btn btn-outline-info">
       <%= link_to 'Сменить пароль', edit_user_registration_path %>
     </p>
   </div>
