--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -8,7 +8,7 @@
       <div class="caption">
         <div class="event-description">
           <h3><%= link_to event.title, event_path(event) %></h3>
-          <h3><small><%= event.datetime %></small></h3>
+          <small><%= l event.datetime, format: :short %></small>
           <div class="buffer-both"><%= event.address %></div>
         </div>
       </div>
