--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,6 +19,9 @@
               <%= link_to 'Изменить', edit_event_path(@event),
                 class: 'btn btn-primary' %>
              </div>
+             <div class="buffer-both">
+              <%= button_to 'Удалить', event_path(@event), method: :delete, data: { confirm: t('are_you_sure') }, class: 'btn btn-danger' %>
+            </div>
           <% end %>
         </div>
       </div>
